# labelberry-homeassistant

./: .gitignore  AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: test.yml  validate.yml
custom_components/: __init__.py
custom_components/labelberry/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml
custom_components/labelberry/translations/: en.json
tests/: conftest.py  test_api.py  test_config_flow.py  test_init.py  test_metadata.py  test_sensor.py  test_service.py
