[project]
name = "labelberry-homeassistant"
version = "0.1.0"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
  "pytest-homeassistant-custom-component>=0.13.344,<0.14",
  "ruff>=0.15.21,<0.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "UP"]
